--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,21 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "build": "tsc",
+    "dev": "ts-node-dev -r tsconfig-paths/register src/infra/http/server.ts"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.6.1",
+    "prisma": "^4.1.0",
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.0.0",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "@prisma/client": "^4.1.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.1"
   }
 }
