--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.6.1",
     "prisma": "^4.1.0",
     "ts-node-dev": "^2.0.0",
@@ -18,7 +19,10 @@
   },
   "dependencies": {
     "@prisma/client": "^4.1.0",
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1"
   }
 }
